<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNormal"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:layout_width="@dimen/view_height_100"
        android:layout_height="@dimen/view_height_100"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/view_margin_80"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_10"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/storage_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_50"
            android:layout_marginLeft="@dimen/view_margin_20"
            android:layout_marginRight="@dimen/view_margin_20"
            android:background="@drawable/shape_text"
            android:hint="@string/login_storage_hint"
            android:padding="@dimen/view_margin_10"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite1"
            android:textSize="@dimen/text_size_17" />

        <EditText
            android:id="@+id/key_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_50"
            android:layout_marginLeft="@dimen/view_margin_20"
            android:layout_marginTop="@dimen/view_margin_20"
            android:layout_marginRight="@dimen/view_margin_20"
            android:background="@drawable/shape_edit"
            android:drawableLeft="@drawable/login_key"
            android:drawablePadding="@dimen/view_padding_10"
            android:hint="@string/login_key_hint"
            android:inputType="text"
            android:padding="@dimen/view_margin_10"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite1"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:id="@+id/login_binding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_margin_20"
            android:layout_marginTop="@dimen/view_margin_20"
            android:layout_marginRight="@dimen/view_margin_20"
            android:background="@drawable/shape_btn_circle"
            android:gravity="center"
            android:padding="@dimen/view_padding_10"
            android:text="@string/login_binding"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>
</LinearLayout>